# legacy-cli

./: Cargo.toml  README.md
src/: api.rs  cli.rs  config.rs  constants.rs  logger.rs  main.rs
src/api/: library.rs
src/models/: catalog.rs
