[package]
name = "legacy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.28"
log = "0.4.19"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
